Calendar App changes

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-  <!-- <div id="app-loader">
+  <div id="app-loader">
     <h1 style="text-align: center; padding: 180px 0; color: #ccc; font-family: Arial, Helvetica, sans-serif">Loading...</h1>
-  </div> -->
+  </div>
   <div id="root"></div>
   <script src="https://apis.google.com/js/api.js"></script>
 </body>
